[app] Wrap buttons text and icon in a span (Firefox bug, see: http://stackoverflow.com/questions/30979265/)

--- a/css/tags.scss
+++ b/css/tags.scss
@@ -42,10 +42,14 @@ textarea:focus {
     @include button-color(#43cec0, #99d8fc);
 }
 
-button,
-.button {
+.button,
+button span:only-child {
     display: inline-flex;
     align-items: center;
+}
+
+button,
+.button {
     padding-top: 6px;
     padding-bottom: 6px;
     padding-left: 12px;
